objects/Project_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Name_CN__c</fullName>
        <description>Created as part of R6 - This field will get auto-populate with the value avaliable in Opportunity Secondary Name on Opportunity.</description>
        <inlineHelpText>Can be used to reflect Opportunity name in local language while the Opportunity name shall be recorded in English.</inlineHelpText>
        <label>Opportunity Name (CN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_EN__c</fullName>
        <description>Created as part of R6 - This field will have the value of the parent Opportunity for the Project Authorization record.</description>
        <label>Opportunity Name (EN)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Authorization</relationshipLabel>
        <relationshipName>Project_Authorization</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Created as part of R6 - This field will display the Opportunty Number of the parent Opportunity.</description>
        <formula>Opportunity_Name_EN__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique Opportunity Identifier</inlineHelpText>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Created as part of R6 - This field will be used to enter Postal Code of the Ship-to-Address of the Bidding Company.</description>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_No__c</fullName>
        <defaultValue>&quot;\\&quot;</defaultValue>
        <description>Created as part of R6 - Reference of the Invitation to Bid.</description>
        <label>Reference No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <description>Created as part of R6 - Remarks for the Application of LOA and POA.</description>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scanning_Copy_Needed__c</fullName>
        <description>Created as part of R6 - The field will be YES/NO If need Scanning Copy or not.</description>
        <label>Scanning Copy Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address__c</fullName>
        <description>Created as part of R6 - The address to delivery LOA.</description>
        <label>Ship-to-Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_to_Company__c</fullName>
        <description>Created as part of R6 - The company which receive the LOA</description>
        <label>Ship-to-Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>Created as part of R6 - This field will be used to enter the phone number of the Applicant.</description>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Template_Language__c</fullName>
        <description>Created as part of R6 - The language of  template.</description>
        <label>Template Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bilingual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <description>Created as part of R6 - The template of LoA</description>
        <inlineHelpText>If the LoA template is special, The LoA with special template must be attached by ABB responsible Sales.</inlineHelpText>
        <label>Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Created as part of R6 - This field will be filled by Contract Risk Management Specialists if the way of delivery is express delivery to track the LOA and POA by Applicant.</description>
        <label>Tracking Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_until__c</fullName>
        <description>Created as part of R6 - The date of valid to of LOA and POA.</description>
        <label>Valid until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Way_of_Delivery__c</fullName>
        <description>Created as part of R6 - This field will be used the select the method to deliver LOA or POA.</description>
        <label>Way of Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Express Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick Up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Project_Authorizations__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Project Authorizations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Authorization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Approval_Status__c</columns>
        <columns>Opportunity_Name_EN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Authorization Letter Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Authorization</pluralLabel>
    <recordTypes>
        <fullName>Letter_Of_Authorization</fullName>
        <active>true</active>
        <description>This will generate a letter of authorization for channel partner to sell the ABB Products.</description>
        <label>Letter Of Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Power_Of_Attorney</fullName>
        <active>true</active>
        <description>A written document in which one person (the principal) appoints another person to act as an agent on his or her behalf, thus conferring authority on the agent to perform certain acts or functions on behalf of the principal.</description>
        <label>Power Of Attorney</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Approval_Status_Completed</fullName>
        <active>false</active>
        <description>R6</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(Approval_Status__c , &apos;Completed&apos;), 
ISPICKVAL( Way_of_Delivery__c , &apos;Express Delivery&apos; ), OR(ISNULL(Tracking_Number__c ), 
 ISBLANK( Tracking_Number__c ))),true,false)</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>If the way of delivery is express delivery then tracking number must be entered before changing the Approval status as Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_Record_Lock</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error message if the approval status is &quot;Approved&quot; any User other than CRMS edit the application.</description>
        <errorConditionFormula>IF( 
AND( 
NOT($Setup.Validation_Override__c.Exclude__c),  
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
TEXT(Approval_Status__c)  =  $Label.PjA_Approval_Status_Approved ,  
( 
ISCHANGED(Address_of_the_Bidding_Company_CN__c) || 
ISCHANGED(Address_of_the_Bidding_Company_EN__c) || 
ISCHANGED(Application__c) ||  
ISCHANGED(Contact_Person__c) || 
ISCHANGED(Design_Institute__c) || 
ISCHANGED(Account_End_User__c) || 
ISCHANGED(Fax_Number__c) || 
ISCHANGED(Industry_Usage__c) || 
ISCHANGED(Is_CP__c) || 
ISCHANGED(Legal_Entity__c) || 
ISCHANGED(Name_of_Company_s_products_CN__c) || 
ISCHANGED(Name_of_Company_s_products_EN__c) || 
ISCHANGED(Name_of_Purchase_Party__c) || 
ISCHANGED(Name_of_the_Bidding_Company_CN__c) || 
ISCHANGED(Name_of_the_Bidding_Company_EN__c) || 
ISCHANGED(Opportunity_Name_EN__c) || 
ISCHANGED(Postal_Code__c) || 
ISCHANGED(Opportunity_Number__c) || 
ISCHANGED(Bidding_Project_Name_CN__c) || 
ISCHANGED(Bidding_Project_Name_EN__c) || 
ISCHANGED(Offering_Primary_Product_Group__c) || 
ISCHANGED(Reference_No__c) || 
ISCHANGED(Remark__c) || 
ISCHANGED(Scanning_Copy_Needed__c) || 
ISCHANGED(Ship_to_Address__c) || 
ISCHANGED(Ship_to_Company__c) || 
ISCHANGED(Telephone__c) || 
ISCHANGED(Template_Language__c) || 
ISCHANGED(Template_Type__c) || 
ISCHANGED(Valid_until__c) || 
ISCHANGED(Way_of_Delivery__c) || 
AND(NOT(ISPICKVAL(Way_of_Delivery__c,&apos;Express Delivery&apos;)), ISCHANGED( Tracking_Number__c )) || 
AND(NOT($UserRole.DeveloperName=$Label.Project_Authorization_CRMS_Role),ISCHANGED( Tracking_Number__c )) || 
ISCHANGED(Name) 
) 
) 
,True,false)</errorConditionFormula>
        <errorMessage>Only the Contract Risk Management Specialist can modify following details once the record is Approved  - 
       1. Tracking number if the &apos;Way of Delivery&apos; is &apos;Express Delivery&apos;.  
       2. Mark application as Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Authorization_Letter_Number</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error messageIf the applicant tries to change the Authorization letter number, as this field will be updated by system itself.</description>
        <errorConditionFormula>AND
(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), NOT($Setup.Validation_Override__c.Exclude__c),NOT(ISNEW()),
ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>You cannot change Authorization letter number, this is always system generated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Awaiting_Approval_Record_Lock</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error message if the approval status is &quot;Waiting for Approval&quot; and applicant tries to edit the application.</description>
        <errorConditionFormula>IF(External_User__c==$Label.SYS_Created_by_ABB,AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),NOT($Setup.Validation_Override__c.Exclude__c), 
ISPICKVAL(PRIORVALUE(Approval_Status__c),&apos;Waiting for Approval&apos;), 
ISPICKVAL(Approval_Status__c,&apos;Waiting for Approval&apos;)),AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),NOT($Setup.Validation_Override__c.Exclude__c),OR($User.Id &lt;&gt; CreatedBy.ABB_Manager__c,$User.Id&lt;&gt;ABB_LoA_Contact_Person__c), 
ISPICKVAL(PRIORVALUE(Approval_Status__c),&apos;Waiting for Approval&apos;), 
ISPICKVAL(Approval_Status__c,&apos;Waiting for Approval&apos;)))</errorConditionFormula>
        <errorMessage>Record cannot be modified while the approval process is underway. Kindly try again once the record is either Approved or Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Record_Lock</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error messagewhen after the Approval Process has been approved and the Contact Risk Manager has updated the Approval Status to &apos;Completed&apos;, no field should be allowed to be edited.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT($Setup.Validation_Override__c.Exclude__c),
ISPICKVAL(PRIORVALUE(Approval_Status__c),&apos;Completed&apos;), 
ISPICKVAL(Approval_Status__c, &apos;Completed&apos;)
)</errorConditionFormula>
        <errorMessage>You cannot modify the record once the Approval Status is &apos;Completed&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Draft_Reject_Record_Lock</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error message if any of the user other than applicant tries to edit the record when the approval status is either &apos;Draft&apos; or &apos;Rejected&apos;</description>
        <errorConditionFormula>IF(External_User__c==$Label.SYS_Created_by_ABB,AND(
    NOT(ISNEW()),NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT($Setup.Validation_Override__c.Exclude__c),
($User.Id != CreatedById),
OR(ISPICKVAL(Approval_Status__c, &apos;Not Submitted&apos;),
AND(TEXT(PRIORVALUE(Approval_Status__c)) == &apos;Rejected&apos;,
ISPICKVAL(Approval_Status__c, &apos;Rejected&apos;)))),
AND(
    NOT(ISNEW()),
NOT($Setup.Validation_Override__c.Exclude__c),NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
AND($User.Id &lt;&gt; CreatedBy.ABB_Manager__c,$User.Id&lt;&gt;ABB_LoA_Contact_Person__c,$User.Id != CreatedById),
OR(ISPICKVAL(Approval_Status__c, &apos;Not Submitted&apos;),
AND(TEXT(PRIORVALUE(Approval_Status__c)) == &apos;Rejected&apos;,
ISPICKVAL(Approval_Status__c, &apos;Rejected&apos;)))))</errorConditionFormula>
        <errorMessage>Only the record creator can edit the record when the Approval Status is either &apos;Draft&apos; or &apos;Rejected&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Template_Language_Chinese</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error message if the Template Language is Chinese and any of the fields mentioned in formula is blank.</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT($Setup.Validation_Override__c.Exclude__c),  
TEXT( Template_Language__c )  =  $Label.PjA_lang_CN, 
OR(
ISBLANK( Address_of_the_Bidding_Company_CN__c ), 
ISBLANK( Name_of_Company_s_products_CN__c ), 
ISBLANK( Name_of_the_Bidding_Company_CN__c ), 
ISBLANK( Bidding_Project_Name_CN__c ) ) )</errorConditionFormula>
        <errorMessage>Please fill the values of the required fields  -  
&apos;Bidding Project Name (CN)&apos;, 
&apos;Name of the Bidding Company (CN)&apos;,  
&apos;Address of the Bidding Company (CN)&apos;, 
&apos;Name of Company’s products (CN)&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Template_Language_English</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error message if the Template Language is English and any of the fields mentioned in formula is blank.</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT($Setup.Validation_Override__c.Exclude__c),  
TEXT(Template_Language__c)  =  $Label.PjA_lang_EN,
OR(
ISBLANK( Address_of_the_Bidding_Company_EN__c ), 
ISBLANK( Name_of_Company_s_products_EN__c ), 
ISBLANK( Name_of_the_Bidding_Company_EN__c ),  
ISBLANK( Bidding_Project_Name_EN__c ) ) )</errorConditionFormula>
        <errorMessage>Please fill the values of the required fields  -  
&apos;Bidding Project Name (EN)&apos;, 
&apos;Name of the Bidding Company (EN)&apos;, 
&apos;Address of the Bidding Company (EN)&apos;, 
&apos;Name of Company’s products (EN)&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Way_of_Delivery_is_Express_Delivery</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error message if the Way of Delivery is Express Delivery and any of the fields mentioned in formula is blank.</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
NOT($Setup.Validation_Override__c.Exclude__c),
TEXT(Way_of_Delivery__c) =  $Label.PjA_Express_Delivery,
OR( 
ISBLANK(Ship_to_Company__c),
ISBLANK(Ship_to_Address__c), 
ISBLANK(Postal_Code__c), 
ISBLANK(Contact_Person__c),
ISBLANK(Telephone__c) 
))</errorConditionFormula>
        <errorMessage>Please fill the values of the required fields  - 
&apos;Ship-to-Company&apos;, 
&apos;Ship-to-Address&apos;, 
&apos;Postal Code&apos;, 
&apos;Contact Person&apos;, 
&apos;Telephone&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Way_of_Delivery_is_Fax_Number</fullName>
        <active>true</active>
        <description>Created as part of R6 - This validation rule will be used to show the error message if the Way of Delivery is Fax and the fax number is blank.</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT($Setup.Validation_Override__c.Exclude__c),
TEXT(Way_of_Delivery__c) = $Label.PjA_Way_Of_Delivery_Fax, 
ISBLANK( Fax_Number__c ))</errorConditionFormula>
        <errorDisplayField>Fax_Number__c</errorDisplayField>
        <errorMessage>Please enter the Fax Number.</errorMessage>
    </validationRules>
</CustomObject>